Add floating button and related image

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "tns-core-modules": "^1.6.0"
   },
   "devDependencies": {
-    "nativescript-dev-typescript": "^0.3.0",
-    "typescript": "^1.7.5",
     "gulp": "*",
-    "gulp-sass": "*"
+    "gulp-sass": "*",
+    "nativescript-dev-typescript": "^0.3.0",
+    "typescript": "^1.7.5"
   }
 }
