--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "nativescript": {
-    "id": "com.winenjoy.app",
-    "tns-android": {
-      "version": "1.6.1"
-    }
-  },
-  "dependencies": {
-    "nativescript-floatingactionbutton": "^0.2.3",
-    "tns-core-modules": "^1.6.0"
-  },
-  "devDependencies": {
-    "gulp": "*",
-    "gulp-sass": "*",
-    "nativescript-dev-typescript": "^0.3.0",
-    "typescript": "^1.7.5"
-  }
+	"name": "winenjoy",
+	"nativescript": {
+		"id": "com.winenjoy.app",
+		"tns-android": {
+			"version": "1.6.1"
+		}
+	},
+	"dependencies": {
+		"nativescript-floatingactionbutton": "^0.2.3",
+		"tns-core-modules": "^1.6.0"
+	},
+	"devDependencies": {
+		"gulp": "*",
+		"gulp-sass": "*",
+		"nativescript-dev-typescript": "^0.3.0",
+		"typescript": "^1.7.5"
+	}
 }
