--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-	"name": "winenjoy",
-	"version": "1.0.0",
-	"nativescript": {
-		"id": "com.winenjoy.app",
-		"tns-android": {
-			"version": "1.6.3"
-		}
-	},
-	"dependencies": {
-		"nativescript-floatingactionbutton": "^0.2.3",
-		"tns-core-modules": "^1.6.0",
-		"lodash": "*"
-	},
-	"devDependencies": {
-		"gulp": "*",
-		"gulp-sass": "*",
-		"nativescript-dev-typescript": "^0.3.0",
-		"typescript": "^1.7.5"
-	}
+  "name": "winenjoy",
+  "version": "1.0.0",
+  "nativescript": {
+    "id": "com.winenjoy.app",
+    "tns-android": {
+      "version": "1.6.3"
+    }
+  },
+  "dependencies": {
+    "lodash": "*",
+    "nativescript-floatingactionbutton": "^0.2.3",
+    "nativescript-geolocation": "0.0.8",
+    "tns-core-modules": "^1.6.0"
+  },
+  "devDependencies": {
+    "gulp": "*",
+    "gulp-sass": "*",
+    "nativescript-dev-typescript": "^0.3.0",
+    "typescript": "^1.7.5"
+  }
 }
