--- a/app/App_Resources/Android/AndroidManifest.xml
+++ b/app/App_Resources/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="__PACKAGE__"
-	android:versionCode="1"
+	android:versionCode="19"
 	android:versionName="0.1">
 
 	<supports-screens
@@ -21,7 +21,7 @@
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
-		android:label="@string/app_name"
+		android:label="Winenjoy"
 		android:theme="@style/AppTheme" >
 		<activity
 			android:name="com.tns.NativeScriptActivity"
