--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     }
   },
   "dependencies": {
-    "lodash": "*",
-    "nativescript-floatingactionbutton": "^0.2.3",
-    "nativescript-geolocation": "0.0.8",
+    "lodash": "^4.8.2",
+    "nativescript-floatingactionbutton": "^2.1.3",
+    "nativescript-geolocation": "^0.0.8",
     "nativescript-plugin-firebase": "^2.1.1",
-    "nativescript-social-share": "^1.1.2",
     "tns-core-modules": "^1.7.1"
   },
   "devDependencies": {
-    "gulp": "*",
-    "gulp-sass": "*",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0",
     "nativescript-dev-typescript": "^0.3.0",
     "typescript": "^1.7.5"
   }
