--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"nativescript": {
 		"id": "com.winenjoy.app",
 		"tns-android": {
-			"version": "1.7.1"
+			"version": "2.0.0"
 		}
 	},
 	"dependencies": {
@@ -16,8 +16,13 @@
 		"tns-core-modules": "^1.7.1"
 	},
 	"devDependencies": {
+		"babel-traverse": "6.7.6",
+		"babel-types": "6.7.7",
+		"babylon": "6.7.0",
+		"filewalker": "0.1.2",
 		"gulp": "^3.9.1",
 		"gulp-sass": "^2.3.1",
+		"lazy": "1.0.11",
 		"nativescript-dev-typescript": "^0.3.1",
 		"typescript": "^1.8.10"
 	}
