--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-	"name": "winenjoy",
-	"version": "0.2.2",
-	"nativescript": {
-		"id": "com.winenjoy.app",
-		"tns-android": {
-			"version": "2.0.0-2016-04-28-553"
-		}
-	},
-	"dependencies": {
-		"lodash": "^4.11.1",
-		"nativescript-floatingactionbutton": "^2.2.1",
-		"nativescript-geolocation": "^0.0.9",
-		"nativescript-google-analytics": "^0.2.7",
-		"nativescript-plugin-firebase": "^2.1.6",
-		"tns-core-modules": "^2.0.0"
-	},
-	"devDependencies": {
-		"babel-traverse": "6.7.6",
-		"babel-types": "6.7.7",
-		"babylon": "6.7.0",
-		"filewalker": "0.1.2",
-		"gulp": "^3.9.1",
-		"gulp-sass": "^2.3.1",
-		"lazy": "1.0.11",
-		"nativescript-dev-typescript": "^0.3.2",
-		"typescript": "^1.8.10"
-	}
+  "name": "winenjoy",
+  "version": "0.2.2",
+  "nativescript": {
+    "id": "com.winenjoy.app",
+    "tns-android": {
+      "version": "2.0.0"
+    }
+  },
+  "dependencies": {
+    "lodash": "^4.11.1",
+    "nativescript-floatingactionbutton": "^2.2.1",
+    "nativescript-geolocation": "^0.0.9",
+    "nativescript-google-analytics": "^0.2.7",
+    "nativescript-plugin-firebase": "^2.1.6",
+    "tns-core-modules": "^2.0.0-2016-05-03-2842"
+  },
+  "devDependencies": {
+    "babel-traverse": "6.7.6",
+    "babel-types": "6.7.7",
+    "babylon": "6.7.0",
+    "filewalker": "0.1.2",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.1",
+    "lazy": "1.0.11",
+    "nativescript-dev-typescript": "^0.3.2",
+    "typescript": "^1.8.10"
+  }
 }
