Update to tns 2.0.1 Improve list displaying

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nativescript-geolocation": "^0.0.11",
     "nativescript-google-analytics": "^0.2.7",
     "nativescript-plugin-firebase": "^2.1.7",
-    "tns-core-modules": "^2.0.0-2016-05-09-2902"
+    "tns-core-modules": "^2.0.1"
   },
   "devDependencies": {
     "babel-traverse": "6.8.0",
