--- a/app/App_Resources/Android/app.gradle
+++ b/app/App_Resources/Android/app.gradle
@@ -7,8 +7,8 @@
 
 android {
   defaultConfig {
-    applicationId "com.winenjoy.app"
     generatedDensities = []
+    applicationId = "__PACKAGE__"  
   }
   aaptOptions {
     additionalParameters "--no-version-vectors"
