--- a/app/App_Resources/Android/app.gradle
+++ b/app/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {
   defaultConfig {
     generatedDensities = []
-    applicationId = "__PACKAGE__"  
+    applicationId = "com.winenjoy.app"
   }
   aaptOptions {
     additionalParameters "--no-version-vectors"
