--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "filewalker": "0.1.2",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.1",
+    "gulp-run": "1.7.1",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "^0.3.2",
     "typescript": "^1.8.10"
