--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "lodash": "^4.15.0",
     "nativescript-appversion": "^1.2.0",
+    "nativescript-autocomplete": "^1.0.0",
     "nativescript-drop-down": "^1.3.2",
     "nativescript-floatingactionbutton": "^2.2.4",
     "nativescript-google-analytics": "^0.2.9",
