--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     }
   },
   "dependencies": {
-    "lodash": "^4.15.0",
-    "nativescript-appversion": "^1.2.0",
-    "nativescript-autocomplete": "^1.0.0",
-    "nativescript-drop-down": "^1.3.2",
-    "nativescript-floatingactionbutton": "^2.2.4",
-    "nativescript-google-analytics": "^0.2.9",
-    "nativescript-plugin-firebase": "^3.5.1",
-    "tns-core-modules": "^2.2.1"
+    "lodash": "4.15.0",
+    "nativescript-appversion": "1.2.0",
+    "nativescript-autocomplete": "1.0.0",
+    "nativescript-drop-down": "1.2.0",
+    "nativescript-floatingactionbutton": "2.2.4",
+    "nativescript-google-analytics": "0.2.9",
+    "nativescript-plugin-firebase": "3.5.3",
+    "tns-core-modules": "2.2.1",
+    "nativescript-cardview": "1.1.11"
   },
   "devDependencies": {
-    "babel-traverse": "6.8.0",
-    "babel-types": "6.8.1",
-    "babylon": "6.8.0",
-    "filewalker": "0.1.2",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.1",
+    "babel-traverse": "6.13.0",
+    "babel-types": "6.13.0",
+    "babylon": "6.9.0",
+    "filewalker": "0.1.3",
+    "gulp-sass": "2.3.2",
     "gulp-run": "1.7.1",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^1.8.10"
+    "nativescript-dev-typescript": "0.3.2",
+    "typescript": "2.0.0"
   }
 }
