--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "babel-types": "6.13.0",
     "babylon": "6.9.0",
     "filewalker": "0.1.3",
-    "gulp":  "*" ,
+    "gulp": "*",
     "gulp-sass": "*",
     "gulp-run": "*",
+    "gulp-jsonminify": "*",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "0.3.2",
     "typescript": "2.0.0"
