--- a/winenjoy.app.csproj
+++ b/winenjoy.app.csproj
@@ -460,20 +460,6 @@
     <Content Include="app\App_Resources\iOS\build.xcconfig" />
     <Content Include="app\App_Resources\iOS\Info.plist" />
     <Content Include="app\App_Resources\iOS\LaunchScreen.storyboard" />
-    <Content Include="app\data\aoc.json" />
-    <Content Include="app\data\aromas.json" />
-    <Content Include="app\data\bubbles.json" />
-    <Content Include="app\data\countries.json" />
-    <Content Include="app\data\grapes.json" />
-    <Content Include="app\data\intensities.json" />
-    <Content Include="app\data\length.json" />
-    <Content Include="app\data\limpidities.json" />
-    <Content Include="app\data\tannins.json" />
-    <Content Include="app\data\regions.json" />
-    <Content Include="app\data\shines.json" />
-    <Content Include="app\data\tears.json" />
-    <Content Include="app\data\acidities.json" />
-    <Content Include="app\data\wineTypes.json" />
     <Content Include="app\fonts\MaterialIcons-Regular.ttf" />
     <Content Include="app\fonts\winenjoy.ttf" />
     <Content Include="app\package.json" />
@@ -563,19 +549,10 @@
     <Content Include="app\views\nose-step\nose-step.scss" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app\data\nose-developments.json" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="app\views\taste-step\taste-step.scss" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app\data\attacks.json" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="app\views\rating-step\rating-step.scss" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="app\data\potentials.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\views\informations-step\informations-step.scss" />
@@ -585,6 +562,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\views\all-in-one\all-in-one.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="resources\wine-criterias.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="app\data\wine-criterias.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="app\data\aromas.json" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
